--- a/assets/js/package.json
+++ b/assets/js/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@andypf/json-viewer": "^2.1.10",
     "dompurify": "^3.2.6",
+    "interactjs": "^1.10.27",
     "umbrellajs": "^3.3.3"
   }
 }
